--- a/travel agency/style.css
+++ b/travel agency/style.css
@@ -1,16 +1,61 @@
 body{
-    background-color:purple ;
+    background-color: #f2a541; 
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; 
+    text-align: center;
 }
 
 
 
     #navbar { display: flex;
-        justify-content: space-between;
-        align-items: center;
-        background-color: aqua;
-        border: 3px yellow;
+        justify-content: center; 
+        align-items: center;        
+        background-color: #c6a8ff;                 
+        
+    }
+    h1{
+        font-size: 50px;
+        
+    }
+    #img{
+        size: 30%;
+        align-content: center;
     }
     
+    p{
+        font-size: 15px;                
+    }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+    #footer{
+
+
+
+    }
+
+
 
 
 
