--- a/style.css
+++ b/style.css
@@ -3,23 +3,47 @@ body{
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; 
     text-align: center;
 }
-
-
-
     #navbar { display: flex;
         justify-content: center; 
         align-items: center;        
         background-color: #c6a8ff;                 
+      
+    }
+    #navbar a{
+        color: black;
+        text-decoration: none;
+        padding: 10px;
         
     }
-    h1{
-        font-size: 50px;
-        
-    }
+    #navbar h2{
+        color: black;
+        padding: 10px;
+
+    }           
     
+    .img{
+        display: flex;
+        justify-content:center;
+        }
+       h1{
+        display: flex;
+        justify-content: center;
+        font-size: 50px;
+       }
+        
+
     
     p{
         font-size: 15px;                
+    }
+    Footer{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        background-color: #c6a8ff;
+    
+
+
     }
 
 
