--- a/travel agency/style.css
+++ b/travel agency/style.css
@@ -3,27 +3,56 @@ body{
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; 
     text-align: center;
 }
-
-
-
     #navbar { display: flex;
         justify-content: center; 
         align-items: center;        
-        background-color: #c6a8ff;                 
+        background-color: #c6a8ff;
         
     }
-    h1{
+    #navbar a{
+        color: black;
+        text-decoration: none;
+        padding: 10px;
+        
+    }
+    #navbar h2{
+        color: black;
+        padding: 10px;
+
+    }           
+    
+    .img{
+        display: flex;
+        justify-content:center;
+        border: 5px;
+        }
+       h1{
+        display: flex;
+        justify-content: center;
         font-size: 50px;
+       }
+       #Greeceimg{
+        border: #c6a8ff;
         
+    
     }
-    #img{
-        size: 30%;
-        align-content: center;
-    }
+
     
     p{
-        font-size: 15px;                
+        font-size: 20px;                
     }
+    Footer{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        background-color: #c6a8ff;
+        font-size: 20px;   
+     }
+   
+        
+
+        
+     
 
 
 
@@ -49,11 +78,11 @@ body{
 
 
 
-    #footer{
+   
 
 
 
-    }
+   
 
 
 
